# SquadServerBlocker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-x86_64-pc-windows-msvc.yml  publish-x86_64-pc-windows-msvc.yml
src/: main.rs
