[package]
name = "SquadServerBlocker"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = [
    "im",
    "serde",
    "raw-win-handle",
] }
scl-gui-widgets = { path = "./scl-gui-widgets" }
serde_json = "1.0.140"
winreg = "0.55.0"
anyhow = "*"
semver = "1.0.26"
tinyget = { version = "1.0", features = ["https"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
hudsucker = { version = "0.20.0", features = ["http2", "rustls-client", "native-tls-client"] }
rcgen = { version = "0.10.0", features = ["x509-parser", "pem"]}
time = "0.3.41"
rustls-pemfile = "1.0.1"
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinInet"] }
regex = "1.11.1"
http = "0.2.12"
dashmap = "5"
once_cell = "1.21.3"
flate2 = "1.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true
